deploy/polaris/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris
spec:
  selector:
    app.kubernetes.io/name: polaris
  ports:
    - name: http
      port: 80
      targetPort: http
