deploy/polaris/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: polaris
spec:
  to:
    kind: Service
    name: polaris
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
